<resources>
    <string name="MediaDBError">Media database error!</string>
    <string name="Set_as_ringtone">Set as ringtone</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="about_content">Xiami for ZTE</string>
    <string name="action_mode_done">Done</string>
    <string name="activity_resolver_use_always">Always</string>
    <string name="activity_resolver_use_once">Just once</string>
    <string name="add">Add</string>
    <string name="add_song_success">Added successfully</string>
    <string name="add_songs_playlist">Add songs</string>
    <string name="add_to_favor_finished">Added as favorite</string>
    <string name="add_to_playlist">Add to</string>
    <string name="album_tab">AlbumBrowserActivity</string>
    <string name="albums_menu">Albums</string>
    <string name="albums_title">Albums</string>
    <string name="albumsongseparator">"
"</string>
    <string name="aliveshare">AliveShare</string>
    <string name="allSongs">All songs</string>
    <string name="all_ablums">All albums</string>
    <string name="all_play">Play all</string>
    <string name="alwaysUse">Always complete such an action using this app</string>
    <string name="am">AM</string>
    <string name="app_name">DRM_UI</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="artirst_tab">ArtistAlbumBrowserActivity</string>
    <string name="artists_title">Artists</string>
    <string name="attention">Attention</string>
    <string name="audio_db_playlist_name">My recordings</string>
    <string name="back_button_label">Back</string>
    <string name="bad_extension_error">Sorry, unsupported file.</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="browse_menu">Artists</string>
    <string name="cancel">CANCEL</string>
    <string name="cannot_find_the_app">Cannot find the corresponding app</string>
    <string name="cannotplay_when_ringing">Unable to play music during a call</string>
    <string name="capital_off">OFF</string>
    <string name="capital_on">ON</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_cache">Clear the cache</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="clearcache_content">Cache will be cleared.</string>
    <string name="clearcache_title">Clear cache</string>
    <string name="close">Close</string>
    <string name="close_traffic">You have disabled data-related features</string>
    <string name="cloud">Cloud</string>
    <string name="confirm_button">OK</string>
    <string name="creatFileFaild">Creat file failed</string>
    <string name="create_playlist_create_text">Save</string>
    <string name="create_playlist_overwrite_text">Overwrite</string>
    <string name="date_picker_decrement_day_button">Decrease day</string>
    <string name="date_picker_decrement_month_button">Decrease month</string>
    <string name="date_picker_decrement_year_button">Decrease year</string>
    <string name="date_picker_dialog_title">Set date</string>
    <string name="date_picker_increment_day_button">Increase day</string>
    <string name="date_picker_increment_month_button">Increase month</string>
    <string name="date_picker_increment_year_button">Increase year</string>
    <string name="datetime_dialog_title">Set Date&amp;Time</string>
    <string name="day_of_week_label_typeface">sans-serif</string>
    <string name="delete">Delete</string>
    <string name="delete_album_desc_nosdcard">Delete the entire album \"%s\" permanently from the storage device?</string>
    <string name="delete_artist_desc_nosdcard">Delete all songs by \"%s\" permanently from the storage device?</string>
    <string name="delete_confirm_button_text">OK</string>
    <string name="delete_file_synchronized">Deleting files are synchronized?</string>
    <string name="delete_item">Delete</string>
    <string name="delete_playlist_info">Delete the playlist \"%s\"?</string>
    <string name="delete_playlist_menu">Delete</string>
    <string name="delete_song_desc_nosdcard">\"%s\" will be permanently deleted from storage.</string>
    <string name="delete_song_from_storage">Delete \"%s\" permanently from the storage device?</string>
    <string name="delete_tag">Delete tag</string>
    <string name="details">Details:</string>
    <string name="details_hms">%1$d:%2$02d:%3$02d</string>
    <string name="details_ms">%1$02d:%2$02d</string>
    <string name="dolby_audio">DOLBY AUDIO</string>
    <string name="dolby_effect">Dolby Atmos</string>
    <string name="drmInfoName">OMA DRM license information:</string>
    <string name="dts_effect">DTS Sound</string>
    <string name="durationformatlong">%1$d:%3$02d:%5$02d</string>
    <string name="durationformatshort">%2$d:%5$02d</string>
    <string name="edit_playlist_menu">Edit</string>
    <string name="emptyplaylist">You have not added any song yet</string>
    <string name="error_mediadb_new_record">Unable to save recorded audio.</string>
    <string name="exit">Exit</string>
    <string name="expand_button_title">Advanced</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="external_storagte_description">SD card</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fail_to_select">Unable to forward the protected file</string>
    <string name="fail_to_set_ringtone">Unable to set the protected or the nonexistent file as the ringtone</string>
    <string name="fail_to_set_ringtone_too_big">Unable to set the large audio file as the ringtone</string>
    <string name="favorate_menu">Add as favorite</string>
    <string name="favorate_title">Favorites</string>
    <string name="favorite">Add to Favorites</string>
    <string name="favorite_tab">MediaFavoriteActivity</string>
    <string name="feedback">Feedback</string>
    <string name="file_name">"File name: "</string>
    <string name="file_tab">FileDirectActivity</string>
    <string name="filer_menu">Folders</string>
    <string name="filer_title">Folders</string>
    <string name="filter_less_60">Filter audio files whose length is less than 60 sec</string>
    <string name="font_family_title_material">sans-serif-medium</string>
    <string name="forty_mesc_cut_title">40 SEC</string>
    <string name="found_no_results">Found no results</string>
    <string name="full_mesc_cut_title">FULL SONG</string>
    <string name="genre_menu">Genre</string>
    <string name="genre_tab">GenreBrowserActivity</string>
    <string name="help_text01">Tap to switch to the music playing screen</string>
    <string name="help_text02">Tap or swipe right to switch to online music</string>
    <string name="help_text03">Slide to view the current playlist or lyrics</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="hour_picker_description">Hours circular slider</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="info_display">"Display: "</string>
    <string name="info_execute">"Execute: "</string>
    <string name="info_play">"Play: "</string>
    <string name="info_print">"Print: "</string>
    <string name="info_unlimited">Unlimited</string>
    <string name="internal_storagte">Internal shared storage</string>
    <string name="internal_storagte_description">Phone</string>
    <string name="item_is_selected">%1$s has been selected.</string>
    <string name="load">Loading…</string>
    <string name="load_fail">Unable to load.</string>
    <string name="loading">Loading...</string>
    <string name="local_tab_allsongs">All songs</string>
    <string name="local_tab_artist">Artists</string>
    <string name="local_tab_favorate">Favorites</string>
    <string name="local_tab_folder">Folders</string>
    <string name="local_tab_genre">Genres</string>
    <string name="local_tab_recent">Recently played</string>
    <string name="local_tab_songs">All songs</string>
    <string name="lunar">Lunar</string>
    <string name="lyric_AB_begin">Start</string>
    <string name="lyric_AB_end">End</string>
    <string name="lyric_downloading_hint">Downloading the lyric...</string>
    <string name="mediaplaybacklabel">Music</string>
    <string name="mediasearch">Search for %s using:</string>
    <string name="menu_scan">Scan</string>
    <string name="mfv_zteextres_version">goto metadata 2019-05-20</string>
    <string name="mins">minutes</string>
    <string name="mins_1">minute</string>
    <string name="minute_picker_description">Minutes circular slider</string>
    <string name="no_tracks_title">No songs</string>
    <string name="ok">OK</string>
    <string name="shuffle_all">Shuffle all</string>
    <string name="talkback_add_songs">Add songs</string>
    <string name="talkback_add_to">Add to</string>
    <string name="talkback_back">Back</string>
    <string name="talkback_delete">Delete</string>
    <string name="talkback_remove">Remove</string>
    <string name="track_Genre">Genre:</string>
    <string name="track_Number">"Track number: "</string>
    <string name="track_album">Album:</string>
    <string name="track_artist">Singer:</string>
    <string name="track_datetaken">Year:</string>
    <string name="track_duration">Duration:</string>
    <string name="track_path">Path:</string>
    <string name="track_size">"File size: "</string>
    <string name="track_title">Title:</string>
</resources>