<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="310.0dip" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TableLayout android:layout_width="wrap_content" android:layout_height="305.0dip" android:layout_margin="6.0dip">
        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="14.0sp" android:ellipsize="end" android:gravity="start" android:id="@id/track_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/track_title" />
        </TableRow>
        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="14.0sp" android:ellipsize="end" android:gravity="start" android:id="@id/track_artist" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/track_artist" />
        </TableRow>
        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="14.0sp" android:ellipsize="end" android:gravity="start" android:id="@id/track_album" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/track_album" />
        </TableRow>
        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="14.0sp" android:ellipsize="end" android:gravity="start" android:id="@id/track_Genre" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/track_Genre" />
        </TableRow>
        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="14.0sp" android:ellipsize="end" android:gravity="start" android:id="@id/track_datetaken" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/track_datetaken" />
        </TableRow>
        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="14.0sp" android:ellipsize="end" android:gravity="start" android:id="@id/track_Number" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/track_Number" />
        </TableRow>
        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="14.0sp" android:ellipsize="end" android:gravity="start" android:id="@id/track_duration" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/track_duration" />
        </TableRow>
        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="14.0sp" android:ellipsize="end" android:gravity="start" android:id="@id/file_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/file_name" />
        </TableRow>
        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="14.0sp" android:ellipsize="end" android:gravity="start" android:id="@id/track_size" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/track_size" />
        </TableRow>
        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="14.0sp" android:ellipsize="end" android:gravity="start" android:id="@id/track_path" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/track_path" />
        </TableRow>
    </TableLayout>
</ScrollView>