<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:gravity="center_vertical" android:id="@id/shuffle_head_view" android:background="@color/list_color" android:descendantFocusability="blocksDescendants" android:layout_width="wrap_content" android:layout_height="36.0dip" android:minHeight="?android:listPreferredItemHeight"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="48.0dip" android:layout_alignParentStart="true">
        <ImageView android:layout_gravity="center_vertical" android:id="@id/shuffle_icon" android:layout_width="24.0dip" android:layout_height="24.0dip" android:contentDescription="@string/app_name" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:textSize="14.0sp" android:textColor="#ffd80e7b" android:ellipsize="end" android:layout_gravity="center_vertical" android:id="@id/shuffle_desc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/shuffle_all" android:singleLine="true" android:layout_marginStart="8.0dip" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:textSize="14.0sp" android:textColor="#ffd80e7b" android:ellipsize="end" android:gravity="center" android:layout_gravity="center_vertical" android:id="@id/total_songs" android:paddingLeft="2.0dip" android:paddingRight="2.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="(0)" android:singleLine="true" android:layout_marginStart="5.0dip" />
    </LinearLayout>
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/shuffle_menu_layout" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="48.0dip" android:layout_alignParentEnd="true">
        <ImageView android:id="@id/addto_icon" android:background="@drawable/actionbar_button_selector" android:padding="12.0dip" android:visibility="gone" android:layout_width="48.0dip" android:layout_height="48.0dip" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:contentDescription="@string/talkback_add_to" />
        <ImageView android:id="@id/addsongs_icon" android:background="@drawable/actionbar_button_selector" android:padding="12.0dip" android:visibility="gone" android:layout_width="48.0dip" android:layout_height="48.0dip" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:contentDescription="@string/talkback_add_songs" />
        <ImageView android:id="@id/share_icon" android:background="@drawable/actionbar_button_selector" android:padding="12.0dip" android:visibility="gone" android:layout_width="48.0dip" android:layout_height="48.0dip" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:contentDescription="@string/app_name" />
        <ImageView android:id="@id/delete_icon" android:background="@drawable/actionbar_button_selector" android:padding="12.0dip" android:visibility="gone" android:layout_width="48.0dip" android:layout_height="48.0dip" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:contentDescription="@string/talkback_delete" />
        <ImageView android:id="@id/remove_icon" android:background="@drawable/actionbar_button_selector" android:padding="12.0dip" android:visibility="gone" android:layout_width="48.0dip" android:layout_height="48.0dip" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:contentDescription="@string/talkback_remove" />
        <ImageView android:id="@id/sort_icon" android:background="@drawable/actionbar_button_selector" android:visibility="gone" android:layout_width="24.0dip" android:layout_height="24.0dip" android:layout_centerVertical="true" android:contentDescription="@string/talkback_remove" android:layout_alignParentEnd="true" />
    </LinearLayout>
</RelativeLayout>