<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/top_layout" android:paddingLeft="@dimen/mfvc_large_padding" android:paddingRight="@dimen/mfvc_large_padding" android:layout_width="fill_parent" android:layout_height="52.0dip" android:layout_alignParentTop="true">
        <ImageView android:id="@id/back_imagetrack" android:layout_width="24.0dip" android:layout_height="24.0dip" android:src="@drawable/expand_more" android:tint="@color/my_music_base_color" android:layout_centerVertical="true" android:contentDescription="@string/talkback_back" android:layout_alignParentStart="true" />
        <TextView android:textSize="16.0sp" android:textColor="@color/music_track_modifycontent" android:id="@id/lyrictitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="32.0dip" android:layout_toRightOf="@id/back_imagetrack" android:layout_centerVertical="true" />
        <ImageButton android:id="@id/menubuttontrack" android:background="@drawable/actionbar_button_selector" android:layout_width="24.0dip" android:layout_height="24.0dip" android:tint="@color/my_music_base_color" android:layout_centerVertical="true" android:contentDescription="@string/app_name" android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/top_layout">
        <FrameLayout android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <cn.zte.music.view.PlaybackLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/mfvc_large_padding" android:layout_marginTop="0.0dip" android:layout_marginRight="@dimen/mfvc_large_padding">
                <FrameLayout android:layout_gravity="center" android:id="@id/album_track_layout" android:layout_width="fill_parent" android:layout_height="166.0dip">
                    <RelativeLayout android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:id="@id/rlColorCloud" android:layout_width="fill_parent" android:layout_height="wrap_content" />
                    <cn.zte.music.view.CircleImageView android:layout_gravity="center_horizontal" android:id="@id/album_default" android:layout_width="143.0dip" android:layout_height="143.0dip" android:layout_marginTop="5.0dip" android:src="@drawable/cover_dafault" />
                    <cn.zte.music.view.CircleImageView android:layout_gravity="center_horizontal" android:id="@id/album_track" android:layout_width="143.0dip" android:layout_height="143.0dip" android:layout_marginTop="5.0dip" />
                </FrameLayout>
                <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="12.0sp" android:textColor="@color/music_track_modifytitle" android:ellipsize="end" android:gravity="left" android:id="@id/track_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/track_title" />
                    <EditText android:textSize="18.0sp" android:textColor="@color/music_track_modifycontent" android:ellipsize="end" android:gravity="left" android:id="@id/track_title_modify" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLength="50" android:textCursorDrawable="@drawable/edittext_cursor" android:backgroundTint="@color/edittext_default_color" />
                </LinearLayout>
                <LinearLayout android:gravity="right" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="12.0sp" android:textColor="@color/music_track_modifytitle" android:ellipsize="end" android:id="@id/track_title_size" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                    <TextView android:textSize="12.0sp" android:textColor="@color/music_track_modifytitle" android:ellipsize="end" android:id="@id/track_title_total_size" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text=" / 50" />
                </LinearLayout>
                <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="12.0sp" android:textColor="@color/music_track_modifytitle" android:ellipsize="end" android:gravity="left" android:id="@id/track_artist" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/track_artist" />
                    <EditText android:textSize="18.0sp" android:textColor="@color/music_track_modifycontent" android:ellipsize="end" android:gravity="left" android:id="@id/track_artist_modify" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLength="50" android:textCursorDrawable="@drawable/edittext_cursor" android:backgroundTint="@color/edittext_default_color" />
                </LinearLayout>
                <LinearLayout android:gravity="right" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="12.0sp" android:textColor="@color/music_track_modifytitle" android:ellipsize="end" android:id="@id/track_artist_size" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                    <TextView android:textSize="12.0sp" android:textColor="@color/music_track_modifytitle" android:ellipsize="end" android:id="@id/track_artist_total_size" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text=" / 50" />
                </LinearLayout>
                <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="12.0sp" android:textColor="@color/music_track_modifytitle" android:ellipsize="end" android:gravity="left" android:id="@id/track_album" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/track_album" />
                    <EditText android:textSize="18.0sp" android:textColor="@color/music_track_modifycontent" android:ellipsize="end" android:gravity="left" android:id="@id/track_album_modify" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLength="50" android:textCursorDrawable="@drawable/edittext_cursor" android:backgroundTint="@color/edittext_default_color" />
                </LinearLayout>
                <LinearLayout android:gravity="right" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="12.0sp" android:textColor="@color/music_track_modifytitle" android:ellipsize="end" android:id="@id/track_album_size" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                    <TextView android:textSize="12.0sp" android:textColor="@color/music_track_modifytitle" android:ellipsize="end" android:id="@id/track_album_total_size" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text=" / 50" />
                </LinearLayout>
                <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip">
                    <TextView android:textSize="@dimen/mfvc_secondary_font_size" android:textColor="@color/music_track_nomodify" android:ellipsize="end" android:gravity="start" android:id="@id/track_Genre" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/track_Genre" android:maxLength="50" />
                </LinearLayout>
                <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="@dimen/mfvc_secondary_font_size" android:textColor="@color/music_track_nomodify" android:ellipsize="end" android:gravity="start" android:id="@id/track_datetaken" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/track_datetaken" />
                </LinearLayout>
                <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="@dimen/mfvc_secondary_font_size" android:textColor="@color/music_track_nomodify" android:ellipsize="end" android:gravity="start" android:id="@id/track_Number" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/track_Number" />
                </LinearLayout>
                <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="@dimen/mfvc_secondary_font_size" android:textColor="@color/music_track_nomodify" android:ellipsize="end" android:gravity="start" android:id="@id/track_duration" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/track_duration" />
                </LinearLayout>
                <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="24.0dip">
                    <TextView android:textSize="@dimen/mfvc_secondary_font_size" android:textColor="@color/music_track_nomodify" android:ellipsize="end" android:gravity="start" android:id="@id/file_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/file_name" />
                </LinearLayout>
                <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="@dimen/mfvc_secondary_font_size" android:textColor="@color/music_track_nomodify" android:ellipsize="end" android:gravity="start" android:id="@id/track_size" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/track_size" />
                </LinearLayout>
                <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="@dimen/mfvc_secondary_font_size" android:textColor="@color/music_track_nomodify" android:ellipsize="end" android:gravity="start" android:id="@id/track_path" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/track_path" />
                </LinearLayout>
                <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="24.0dip">
                    <TextView android:textSize="@dimen/mfvc_secondary_font_size" android:textColor="@color/music_track_nomodify" android:ellipsize="end" android:gravity="left" android:id="@id/drm_play" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/info_play" />
                </LinearLayout>
                <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="@dimen/mfvc_secondary_font_size" android:textColor="@color/music_track_nomodify" android:ellipsize="end" android:gravity="left" android:id="@id/drm_display" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/info_display" />
                </LinearLayout>
                <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="@dimen/mfvc_secondary_font_size" android:textColor="@color/music_track_nomodify" android:ellipsize="end" android:gravity="left" android:id="@id/drm_execute" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/info_execute" />
                </LinearLayout>
                <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="@dimen/mfvc_secondary_font_size" android:textColor="@color/music_track_nomodify" android:ellipsize="end" android:gravity="left" android:id="@id/drm_print" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/info_print" />
                </LinearLayout>
            </cn.zte.music.view.PlaybackLayout>
        </FrameLayout>
    </ScrollView>
</RelativeLayout>